task-resources/upg-loadme-manifests/upg-loadme-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: demo
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: web
  clusterIP: None
  selector:
    app: redis

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: demo
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
          name: web
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - mountPath: "/var/lib/redis"
          name: redis-volume
      volumes:
      - name: redis-volume
        # This AWS EBS volume must be alread y created
        awsElasticBlockStore:
          volumeID: "vol-0e519f3a1b2f86223"
          fsType: ext4
      #added configmap that can be mounted
      - name: config
        configMap:
          # Provide the name of the ConfigMap you want to mount.
          name: redis-config
          # An array of keys from the ConfigMap to create as files visit: https://kubernetes.io/docs/concepts/configuration/configmap/#configmaps-and-pods
